Fix hamburger menu vertical alignment in docs header (#217)

--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -1262,6 +1262,10 @@ blockquote {
     align-items: start;
   }
 
+  .main-nav {
+    align-self: center;
+  }
+
   .search-container {
     order: 3;
     width: 100%;
